<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.ashutosh.internship.project.CreatePostActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
    <EditText
        android:id="@+id/editTitle"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:hint="@string/title"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editDescription"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:hint="@string/description"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editAddress"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:hint="@string/address"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:hint="@string/Post"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />






















</LinearLayout>
</ScrollView>
