<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.ashutosh.internship.project.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewPic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:clickable="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="90dp"
            android:background="@color/white"
            android:hint="@string/name"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtName"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtMail"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtphone"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtPass"
            android:background="@color/white"
            android:hint="@string/rePass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRePass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@color/white"
            android:text="@string/sign" />

        <TextView
            android:id="@+id/txtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>
