<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="top"
    android:padding="25dp"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.ashutosh.internship.project.MainActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:src="@drawable/stopwatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/username"
        android:background="@color/white"
        android:layout_below="@+id/imgLogo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp" />
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@color/white"
        android:layout_below="@+id/editTextUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />



        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:background="@color/white"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/checkBox"
            android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:clickable="true"
        android:textSize="18sp"
        android:onClick="signUpPage"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:id="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/remember"
        android:layout_below="@+id/editTextPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
